--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </p>
       </section>
       <footer>
-        <p>Site criado por <a href="https//:gustavoguanabara.github.io"target='_blank'>Gustavo Guanabara</a> para <a href="https//:cursoemvideo.com"target='_blank'>Curso em Video</a></p>
+        <p>Site criado por <a href="https//:gustavoguanabara.github.io"target='_blank'>Cicero Junior</a> No Projeto  <a href="https//:cursoemvideo.com"target='_blank'>Curso em Video</a></p>
       </footer>
 </body>
 </html>
